fix related posts font and spacing

--- a/assets/themes/jamesyu/css/main.css
+++ b/assets/themes/jamesyu/css/main.css
@@ -7,7 +7,7 @@ body {
   text-align: center;
   font-family: "chaparral-pro-1","chaparral-pro-2", Georgia, serif;
   /* font-family: 'Lato'; */
-  font-size: 22px;
+  font-size: 100%;
   /*color: #333; */ }
 
 #header {
@@ -26,7 +26,7 @@ body {
     #header ul li {
       margin-top: 5px;
       margin-left: 18px;
-      font-size: 20px;
+      font-size: 100%;
       font-weight: 300; }
       #header ul li a {
         color: #ffffff;
@@ -34,13 +34,13 @@ body {
         #header ul li a:hover {
           text-decoration: underline; }
   #header h1 {
-    font-size: 49px;
+    font-size: 36px;
     font-weight: bold; }
     #header h1 a {
       text-decoration: none;
       color: #ffffff; }
   #header h2 {
-    font-size: 23px;
+    font-size: 30px;
     font-weight: 300; }
     #header h2 img {
       margin-left: 3px; }
@@ -64,27 +64,45 @@ body {
     position: relative;
     float: right;
 } 
+
+#content .inner .right-section {
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+td .side-post-list-item {
+    font-size: 80%;
+}
+
+table#related-posts
+{
+    border-collapse:separate;
+    border-spacing:0 10px;
+}
+
 .post {
   margin-bottom: 55px;
   width: 100%; }
 
   .post h3, .post h4, .post h5 {
-    font-size: 29px;
+    font-size: 25px;
     font-family: 'Lato';
     font-weight: bold;
     margin-bottom: 25px;
     color: #333; }
   .post h3 a {
     text-decoration: none;
-    color: #333; }
+    color: #333;
+    font-size: 30px;
+  }
     .post h3 a:hover {
       text-decoration: underline; }
   .post h4 {
     margin-top: 25px;
-    font-size: 24px; }
+    font-size: 22px; }
   .post h5 {
-    margin-top: 20px;
-    font-size: 20px; }
+    margin-top: 18px;
+    font-size: px; }
 /*  .post .body {
     font-size: 17p */
   .post .body p {
